# s3_Scan

./: READme  bad_policy.json  good_policy.json  misconfig_cors.json  properconfig_cors.json  pyproject.toml  requirements.txt
s3scan/: cli.py
s3scan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
s3scan/commands/: audit.py  check_acl.py  check_cors.py  check_policy.py  check_versioning.py  get_acl.py  get_cors.py  get_policy.py  list_all_buckets.py  list_buckets.py
